<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bmi_calculator"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/choose_gender"
        android:layout_gravity="center"
        android:textSize="28sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="70dp">

    </TextView>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroupGender"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioMale"
            android:layout_margin="5dp"
            android:textSize="22sp"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:text="@string/male"/>


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioFemale"
            android:layout_margin="5dp"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:text="@string/female"/>

    </RadioGroup>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:padding="16dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/weightText"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:text="@string/weight"/>

                <EditText
                    android:id="@+id/weightEdit"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginEnd="6dp"
                    android:hint="kg"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:textSize="26sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:padding="16dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/heightText"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:text="@string/height"/>

                <EditText
                    android:id="@+id/heightEdit"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="6dp"
                    android:hint="cm"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:textSize="26sp" />

            </LinearLayout>
        </LinearLayout>



    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calculatorBMI"
            android:text="@string/calculate"
            android:textSize="16sp"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resetBMI"
            android:layout_margin="10dp"
            android:text="@string/reset"
            android:textSize="16sp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultText"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:text="@string/result"/>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:src="@drawable/bmi" />

</LinearLayout>

